manifests-1/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vanguard-grpc
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  labels:
    app: vanguard
spec:
  ingressClassName: nginx
  rules:
    - host: vanguard-grpc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vanguard
                port:
                  number: 50051
